코드 처리하기